--- a/components/navigation-links2.css
+++ b/components/navigation-links2.css
@@ -4,18 +4,31 @@
   align-items: center;
   flex-direction: row;
 }
-.navigation-links2-text1 {
+.navigation-links2-link {
+  font-size: 30px;
+  font-style: normal;
+  font-family: "Georgia";
+  font-weight: 700;
   margin-left: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
-.navigation-links2-text2 {
+.navigation-links2-link1 {
+  font-size: 30px;
+  font-style: normal;
+  font-family: "Georgia";
+  font-weight: 700;
   margin-left: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
-.navigation-links2-text3 {
+.navigation-links2-link2 {
+  font-size: 30px;
+  font-style: normal;
+  font-family: "Georgia";
+  font-weight: 700;
   margin-left: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
-.navigation-links2-text4 {
-  margin-left: var(--dl-space-space-twounits);
-}
+
 
 
 
@@ -29,22 +42,15 @@
     align-items: flex-start;
     flex-direction: column;
   }
-  .navigation-links2-text {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links2-text1 {
+  .navigation-links2-link {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
-  .navigation-links2-text2 {
+  .navigation-links2-link1 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
-  .navigation-links2-text3 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links2-text4 {
+  .navigation-links2-link2 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
