--- a/components/navigation-links2.html
+++ b/components/navigation-links2.html
@@ -66,11 +66,13 @@
     <div>
       <link href="./navigation-links2.css" rel="stylesheet" />
       <nav class="navigation-links2-nav">
-        <span class="navigation-links2-text"><span>About</span></span>
-        <span class="navigation-links2-text1"><span>Features</span></span>
-        <span class="navigation-links2-text2"><span>Pricing</span></span>
-        <span class="navigation-links2-text3"><span>Team</span></span>
-        <span class="navigation-links2-text4"><span>Blog</span></span>
+        <a href="#home" class="navigation-links2-link"><span>Home</span></a>
+        <a href="#product" class="navigation-links2-link1">
+          <span>Products</span>
+        </a>
+        <a href="#footer" class="navigation-links2-link2">
+          <span>Contact Us</span>
+        </a>
       </nav>
     </div>
     <script
