--- a/index.css
+++ b/index.css
@@ -355,7 +355,7 @@
   display: contents;
 }
 .home-image2 {
-  width: 50[x;
+  width: 50%;
   padding: 0px;
   object-fit: cover;
   margin-left: 0px;
