--- a/index.css
+++ b/index.css
@@ -84,6 +84,7 @@
   display: contents;
 }
 .home-heading {
+  font-size: 30px;
   font-family: "Georgia";
   text-decoration: none;
 }
@@ -299,7 +300,7 @@
   padding-bottom: var(--dl-space-space-unit);
 }
 .home-footer {
-  width: auto;
+  width: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
@@ -311,6 +312,7 @@
   justify-content: space-between;
 }
 .home-container3 {
+  width: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: flex-start;
@@ -322,7 +324,7 @@
   font-family: "Georgia";
 }
 .home-text17 {
-  width: 50%;
+  width: 304px;
   height: auto;
   font-size: 20px;
   align-self: center;
@@ -337,7 +339,6 @@
   display: flex;
   align-self: center;
   margin-top: var(--dl-space-space-oneandhalfunits);
-  align-items: center;
   flex-direction: row;
 }
 .home-link1 {
@@ -379,13 +380,6 @@
   padding-right: 0px;
   padding-bottom: 0px;
   text-decoration: none;
-}
-.home-links-container {
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
 }
 .home-link4 {
   display: contents;
@@ -448,11 +442,6 @@
   .home-text17 {
     padding-right: var(--dl-space-space-unit);
   }
-  .home-links-container {
-    width: auto;
-    margin-top: var(--dl-space-space-twounits);
-    flex-direction: row;
-  }
   .home-image4 {
     animation-name: fadeInUp;
     animation-delay: 0s;
@@ -474,6 +463,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  .home-mobile-menu {
+    display: flex;
   }
   .home-text {
     font-size: 30px;
@@ -512,13 +504,6 @@
   .home-text17 {
     padding-right: var(--dl-space-space-unit);
   }
-  .home-links-container {
-    width: auto;
-    margin-top: var(--dl-space-space-twounits);
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-  }
   .home-image4 {
     animation-name: fadeInUp;
     animation-delay: 0s;
@@ -533,21 +518,23 @@
     padding: var(--dl-space-space-unit);
   }
   .home-heading {
+    font-size: 25px;
     text-align: left;
   }
   .home-icon {
     flex-direction: column;
   }
   .home-mobile-menu {
-    width: 478px;
-    height: 1719px;
+    width: 100%;
+    height: 100%;
     display: none;
     padding: 16px;
   }
   .home-text {
     font-size: 30px;
     font-style: normal;
-    font-weight: 500;
+    font-family: Georgia;
+    font-weight: 700;
   }
   .home-text01 {
     font-size: 30px;
@@ -573,6 +560,7 @@
     font-family: Georgia;
   }
   .home-image {
+    width: 50%;
     display: none;
   }
   .home-text04 {
@@ -637,11 +625,6 @@
     font-size: 16px;
     text-align: center;
     font-family: Georgia;
-  }
-  .home-links-container {
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: space-between;
   }
   .home-image4 {
     animation-name: fadeInUp;
